--- a/src/app/pokemon/pokemon.component.html
+++ b/src/app/pokemon/pokemon.component.html
@@ -3,7 +3,7 @@
         <img class="logotipo" src="assets/pokedex.png">
         <div class="form-group">
             <label>Busca tu pokemon</label>
-            <input class="form-control" type="text" (ngModelChange)="getItems($event)" placeholder="Buscar..." [(ngModel)]="buscar" name="buscar" onkeypress="return ((event.charCode >= 65 && event.charCode <= 90) || (event.charCode >= 97 && event.charCode <= 122))">
+            <input class="form-control" type="text" (ngModelChange)="getItems($event)" placeholder="Buscar pokemon..." [(ngModel)]="buscar" name="buscar" onkeypress="return ((event.charCode >= 65 && event.charCode <= 90) || (event.charCode >= 97 && event.charCode <= 122))">
         </div>
     
         <ul *ngIf="buscar">
