--- a/src/app/pokemon/pokemon.component.scss
+++ b/src/app/pokemon/pokemon.component.scss
@@ -69,7 +69,7 @@
     }   
     
     .box{
-        background: #FFFFFF;
+        background: #333;
         box-shadow: 0px 0px 5px rgba(12, 26, 75, 0.03), 0px 4px 30px -2px rgba(50, 50, 71, 0.04);
         border-radius: 20px;
         float: left;
@@ -84,12 +84,14 @@
             float: left;
             width: 100%;
             text-align: center;
+            color: #fff;
         }
         .name{
-            font-size: 25px;
+            font-size: 30px;
             font-weight: 600;
             margin-bottom: 10px;
             text-transform: capitalize;
+            color: #fff;
         }
     }
 }
