--- a/src/app/pokemon/pokemon.component.scss
+++ b/src/app/pokemon/pokemon.component.scss
@@ -26,6 +26,14 @@
                 width: 100%;
             }
         }
+        .text_anteriores{
+            text-align: center;
+            color: #fff;
+            margin-top: 15px;
+            float: left;
+            width: 100%;
+            margin-bottom: 0px;
+        }
         ul{
             list-style: none;
             float: left;
