--- a/src/app/pokemon/pokemon.component.scss
+++ b/src/app/pokemon/pokemon.component.scss
@@ -20,6 +20,7 @@
                 float: left;
                 font-size: 20px;
                 font-weight: 600;
+                color: #fff;
             }
             input{
                 float: left;
