--- a/src/app/pokemon/pokemon.component.scss
+++ b/src/app/pokemon/pokemon.component.scss
@@ -64,15 +64,16 @@
             width: 100%;
             text-align: center;
             span{
-                background: #264adb;
+                background: #202537;
                 border-radius: 30px;
-                padding: 5px 20px;
+                padding: 5px 30px;
                 margin: 10px 5px 0px 5px;
                 color: #fff;
                 cursor: pointer;
                 display: inline-flex;
                 justify-content: center;
                 align-items: center;
+                font-size: 15px;
             }
         }
     }   
