--- a/src/app/pokemon/pokemon.component.html
+++ b/src/app/pokemon/pokemon.component.html
@@ -2,7 +2,7 @@
     <div class="box_buscar">
         <img class="logotipo" src="assets/pokedex.png">
         <div class="form-group">
-            <label>Busca tu Pokemon</label>
+            <label>Busca tus pokemon</label>
             <input class="form-control" type="text" (ngModelChange)="getItems($event)" placeholder="Buscar pokemon..." [(ngModel)]="buscar" name="buscar" onkeypress="return ((event.charCode >= 65 && event.charCode <= 90) || (event.charCode >= 97 && event.charCode <= 122))">
         </div>
         <p class="text_anteriores">Pokemon buscados recientemente</p>
