--- a/src/app/pokemon/pokemon.component.scss
+++ b/src/app/pokemon/pokemon.component.scss
@@ -2,7 +2,7 @@
     width: 400px;
     .logotipo{
         margin: auto;
-        width: 300px;
+        width: 400px;
         display: block;
     }
     .box_buscar{
@@ -21,16 +21,19 @@
                 font-size: 20px;
                 font-weight: 600;
                 color: #fff;
+                margin-bottom: 15px;
             }
             input{
                 float: left;
                 width: 100%;
+                border-radius: 30px;
+                text-align: center;
             }
         }
         .text_anteriores{
             text-align: center;
             color: #fff;
-            margin-top: 15px;
+            margin-top: 30px;
             float: left;
             width: 100%;
             margin-bottom: 0px;
