Agregre el contenido adicional

--- a/src/app/pokemon/pokemon.component.html
+++ b/src/app/pokemon/pokemon.component.html
@@ -17,6 +17,7 @@
 
     <div class="box" *ngIf="pokemon">
         <div class="info">
+            <h3>Pokemon</h3>
             <img [src]="pokemon.img">
             <span class="name">Nombre: {{pokemon.name}}</span>
             <span><strong>ID:</strong> {{pokemon.id}}</span>
