--- a/src/app/pokemon/pokemon.component.scss
+++ b/src/app/pokemon/pokemon.component.scss
@@ -86,6 +86,13 @@
         width: 100%;
         padding: 35px;
         margin-bottom: 30px;
+        h3{
+            text-align: center;
+            float: left;
+            width: 100%;
+            color: #fff;
+            font-size: 18px;
+        }
         img{
             width: 100%;
             float: left;
