--- a/src/app/pokemon/pokemon.component.scss
+++ b/src/app/pokemon/pokemon.component.scss
@@ -2,8 +2,9 @@
     width: 400px;
     .logotipo{
         margin: auto;
-        width: 400px;
+        width: 200px;
         display: block;
+        margin-bottom: 20px;
     }
     .box_buscar{
         position: relative;
