--- a/src/app/pokemon/pokemon.component.html
+++ b/src/app/pokemon/pokemon.component.html
@@ -5,7 +5,7 @@
             <label>Busca tus pokemon</label>
             <input class="form-control" type="text" (ngModelChange)="getItems($event)" placeholder="Buscar pokemon..." [(ngModel)]="buscar" name="buscar" onkeypress="return ((event.charCode >= 65 && event.charCode <= 90) || (event.charCode >= 97 && event.charCode <= 122))">
         </div>
-        <p class="text_anteriores">Pokemon buscados recientemente</p>
+        <p class="text_anteriores">Pokemon buscados recientes</p>
         <ul *ngIf="buscar">
             <li *ngFor="let pokemon of pokeNamesFilters" (click)="verInfo(pokemon)" >
                 <a>{{pokemon}}</a>
