--- a/src/app/pokemon/pokemon.component.scss
+++ b/src/app/pokemon/pokemon.component.scss
@@ -21,7 +21,7 @@
                 float: left;
                 font-size: 20px;
                 font-weight: 600;
-                color: #fff;
+                color: red;
                 margin-bottom: 15px;
             }
             input{
