--- a/src/app/pokemon/pokemon.component.html
+++ b/src/app/pokemon/pokemon.component.html
@@ -5,7 +5,7 @@
             <label>Busca tus pokemon</label>
             <input class="form-control" type="text" (ngModelChange)="getItems($event)" placeholder="Buscar pokemon..." [(ngModel)]="buscar" name="buscar" onkeypress="return ((event.charCode >= 65 && event.charCode <= 90) || (event.charCode >= 97 && event.charCode <= 122))">
         </div>
-        <p class="text_anteriores">Pokemon buscados recientemente</p>
+        <p class="text_anteriores">Busquedas recientes</p>
         <ul *ngIf="buscar">
             <li *ngFor="let pokemon of pokeNamesFilters" (click)="verInfo(pokemon)" >
                 <a>{{pokemon}}</a>
@@ -18,6 +18,7 @@
     <div class="box" *ngIf="pokemon">
         <div class="info">
             <h3>Pokemon</h3>
+            <p>Hermoso pokemon</p>
             <img [src]="pokemon.img">
             <span class="name">Nombre: {{pokemon.name}}</span>
             <span><strong>ID:</strong> {{pokemon.id}}</span>
