modificacion en el header

--- a/src/app/pokemon/pokemon.component.html
+++ b/src/app/pokemon/pokemon.component.html
@@ -1,3 +1,6 @@
+<header>
+    <img class="logotipo" src="assets/pokedex.png"> <span>Busca todos los pokemos que quieras</span> 
+</header>
 <div class="container">
     <div class="box_buscar">
         <img class="logotipo" src="assets/pokedex.png">
