--- a/src/app/pokemon/pokemon.component.scss
+++ b/src/app/pokemon/pokemon.component.scss
@@ -1,3 +1,13 @@
+header{
+    background: rgba(255, 255, 255, 0.3);
+    padding: 15px 30px;
+    color: #fff;
+    font-size: 16px;
+    img{
+        width: 120px;
+        margin-right: 20px;
+    }
+}
 .container{
     width: 400px;
     .logotipo{
