--- a/src/app/pokemon/pokemon.component.scss
+++ b/src/app/pokemon/pokemon.component.scss
@@ -119,3 +119,13 @@
         }
     }
 }
+footer{
+    float: left;
+    width: 100%;
+    padding: 15px 30px;
+    text-align: center;
+    background: rgba(255, 255, 255, 0.3);
+    color: #fff;
+    position: fixed;
+    bottom: 0px;
+}
